src/main/java/br/ufscar/dc/compiladores/alguma/lexico/AlgumaParser.java
// Generated from C:/Users/74434/Documents/GitHub/analisador-lexico-la-antlr/src/main/java/br/ufscar/dc/compiladores/alguma/lexico\Alguma.g4 by ANTLR 4.8
package br.ufscar.dc.compiladores.alguma.lexico;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AlgumaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PR_ALGORITMO=1, PR_DECLARE=2, PR_LEIA=3, PR_ESCREVA=4, PR_CASO=5, PR_SEJA=6, 
		PR_SENAO=7, PR_PARA=8, PR_ATE=9, PR_FACA=10, PR_ENQUANTO=11, PR_SE=12, 
		PR_E=13, PR_ENTAO=14, PR_REGISTRO=15, PR_TIPO=16, PR_PROCEDIMENTO=17, 
		PR_VAR=18, PR_FUNCAO=19, PR_RETORNE=20, PR_CONSTANTE=21, PR_VERDADEIRO=22, 
		PR_FALSO=23, PR_NAO=24, PR_OU=25, PR_FIM_ALGORITMO=26, PR_FIM_CASO=27, 
		PR_FIM_PARA=28, PR_FIM_ENQUANTO=29, PR_FIM_SE=30, PR_FIM_REGISTRO=31, 
		PR_FIM_PROCEDIMENTO=32, PR_FIM_FUNCAO=33, PR_TIPO_LITERAL=34, PR_TIPO_INTEIRO=35, 
		PR_TIPO_REAL=36, PR_TIPO_LOGICO=37, DELIMITADOR_DOIS_PONTOS=38, DELIMITADOR_ABRE_PARENTESES=39, 
		DELIMITADOR_FECHA_PARENTESES=40, DELIMITADOR_VIRGULA=41, DELIMITADOR_ABRE_COLCHETES=42, 
		DELIMITADOR_FECHA_COLCHETES=43, OPERADOR_RANGE=44, OPERADOR_SOMA=45, OPERADOR_SUBTRACAO=46, 
		OPERADOR_MULTIPLICACAO=47, OPERADOR_DIVISAO=48, OPERADOR_MOD=49, OPERADOR_MENOR=50, 
		OPERADOR_MAIOR=51, OPERADOR_DIFERENTE=52, OPERADOR_MAIOR_IGUAL=53, OPERADOR_MENOR_IGUAL=54, 
		OPERADOR_IGUAL=55, OPERADOR_ENDERECO=56, OPERADOR_REGISTRO=57, OPERADOR_ATRIBUICAO=58, 
		TIPO_ENDERECO=59, CADEIA=60, NUM_INT=61, NUM_REAL=62, COMENTARIO=63, ESPACO_EM_BRANCO=64, 
		COMENTARIO_NAO_FECHADO=65, CADEIA_NAO_FECHADA=66, IDENT=67;
	public static final int
		RULE_programa = 0, RULE_corpo = 1, RULE_declaracoes = 2, RULE_declaracao_global = 3, 
		RULE_cmd = 4, RULE_cmdRetorne = 5, RULE_cmdChamada = 6, RULE_cmdAtribuicao = 7, 
		RULE_cmdFaca = 8, RULE_cmdEnquanto = 9, RULE_cmdPara = 10, RULE_cmdCaso = 11, 
		RULE_selecao = 12, RULE_item_selecao = 13, RULE_constantes = 14, RULE_numero_intervalo = 15, 
		RULE_cmdSe = 16, RULE_cmdEscreva = 17, RULE_cmdLeia = 18, RULE_parametros = 19, 
		RULE_parametro = 20, RULE_declaracao_local = 21, RULE_valor_constante = 22, 
		RULE_variavel = 23, RULE_tipo = 24, RULE_tipo_estendido = 25, RULE_tipo_basico = 26, 
		RULE_registro = 27, RULE_identificador = 28, RULE_dimensao = 29, RULE_expressao_aritmetica = 30, 
		RULE_op1 = 31, RULE_termo = 32, RULE_op2 = 33, RULE_fator = 34, RULE_op3 = 35, 
		RULE_parcela = 36, RULE_parcela_nao_unario = 37, RULE_op_unario = 38, 
		RULE_parcela_unario = 39, RULE_expressao = 40, RULE_op1_logico = 41, RULE_termo_logico = 42, 
		RULE_op2_logico = 43, RULE_fator_logico = 44, RULE_parcela_logica = 45, 
		RULE_expressao_relacional = 46, RULE_op_relacional = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "corpo", "declaracoes", "declaracao_global", "cmd", "cmdRetorne", 
			"cmdChamada", "cmdAtribuicao", "cmdFaca", "cmdEnquanto", "cmdPara", "cmdCaso", 
			"selecao", "item_selecao", "constantes", "numero_intervalo", "cmdSe", 
			"cmdEscreva", "cmdLeia", "parametros", "parametro", "declaracao_local", 
			"valor_constante", "variavel", "tipo", "tipo_estendido", "tipo_basico", 
			"registro", "identificador", "dimensao", "expressao_aritmetica", "op1", 
			"termo", "op2", "fator", "op3", "parcela", "parcela_nao_unario", "op_unario", 
			"parcela_unario", "expressao", "op1_logico", "termo_logico", "op2_logico", 
			"fator_logico", "parcela_logica", "expressao_relacional", "op_relacional"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'algoritmo'", "'declare'", "'leia'", "'escreva'", "'caso'", "'seja'", 
			"'senao'", "'para'", "'ate'", "'faca'", "'enquanto'", "'se'", "'e'", 
			"'entao'", "'registro'", "'tipo'", "'procedimento'", "'var'", "'funcao'", 
			"'retorne'", "'constante'", "'verdadeiro'", "'falso'", "'nao'", "'ou'", 
			"'fim_algoritmo'", "'fim_caso'", "'fim_para'", "'fim_enquanto'", "'fim_se'", 
			"'fim_registro'", "'fim_procedimento'", "'fim_funcao'", "'literal'", 
			"'inteiro'", "'real'", "'logico'", "':'", "'('", "')'", "','", "'['", 
			"']'", "'..'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<>'", 
			"'>='", "'<='", "'='", "'&'", "'.'", "'<-'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PR_ALGORITMO", "PR_DECLARE", "PR_LEIA", "PR_ESCREVA", "PR_CASO", 
			"PR_SEJA", "PR_SENAO", "PR_PARA", "PR_ATE", "PR_FACA", "PR_ENQUANTO", 
			"PR_SE", "PR_E", "PR_ENTAO", "PR_REGISTRO", "PR_TIPO", "PR_PROCEDIMENTO", 
			"PR_VAR", "PR_FUNCAO", "PR_RETORNE", "PR_CONSTANTE", "PR_VERDADEIRO", 
			"PR_FALSO", "PR_NAO", "PR_OU", "PR_FIM_ALGORITMO", "PR_FIM_CASO", "PR_FIM_PARA", 
			"PR_FIM_ENQUANTO", "PR_FIM_SE", "PR_FIM_REGISTRO", "PR_FIM_PROCEDIMENTO", 
			"PR_FIM_FUNCAO", "PR_TIPO_LITERAL", "PR_TIPO_INTEIRO", "PR_TIPO_REAL", 
			"PR_TIPO_LOGICO", "DELIMITADOR_DOIS_PONTOS", "DELIMITADOR_ABRE_PARENTESES", 
			"DELIMITADOR_FECHA_PARENTESES", "DELIMITADOR_VIRGULA", "DELIMITADOR_ABRE_COLCHETES", 
			"DELIMITADOR_FECHA_COLCHETES", "OPERADOR_RANGE", "OPERADOR_SOMA", "OPERADOR_SUBTRACAO", 
			"OPERADOR_MULTIPLICACAO", "OPERADOR_DIVISAO", "OPERADOR_MOD", "OPERADOR_MENOR", 
			"OPERADOR_MAIOR", "OPERADOR_DIFERENTE", "OPERADOR_MAIOR_IGUAL", "OPERADOR_MENOR_IGUAL", 
			"OPERADOR_IGUAL", "OPERADOR_ENDERECO", "OPERADOR_REGISTRO", "OPERADOR_ATRIBUICAO", 
			"TIPO_ENDERECO", "CADEIA", "NUM_INT", "NUM_REAL", "COMENTARIO", "ESPACO_EM_BRANCO", 
			"COMENTARIO_NAO_FECHADO", "CADEIA_NAO_FECHADA", "IDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Alguma.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AlgumaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public TerminalNode PR_ALGORITMO() { return getToken(AlgumaParser.PR_ALGORITMO, 0); }
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public TerminalNode PR_FIM_ALGORITMO() { return getToken(AlgumaParser.PR_FIM_ALGORITMO, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			declaracoes();
			setState(97);
			match(PR_ALGORITMO);
			setState(98);
			corpo();
			setState(99);
			match(PR_FIM_ALGORITMO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpoContext extends ParserRuleContext {
		public List<Declaracao_localContext> declaracao_local() {
			return getRuleContexts(Declaracao_localContext.class);
		}
		public Declaracao_localContext declaracao_local(int i) {
			return getRuleContext(Declaracao_localContext.class,i);
		}
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public CorpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCorpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCorpo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitCorpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorpoContext corpo() throws RecognitionException {
		CorpoContext _localctx = new CorpoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_corpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_DECLARE) | (1L << PR_TIPO) | (1L << PR_CONSTANTE))) != 0)) {
				{
				{
				setState(101);
				declaracao_local();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_LEIA) | (1L << PR_ESCREVA) | (1L << PR_CASO) | (1L << PR_PARA) | (1L << PR_FACA) | (1L << PR_ENQUANTO) | (1L << PR_SE) | (1L << PR_RETORNE) | (1L << TIPO_ENDERECO))) != 0) || _la==IDENT) {
				{
				{
				setState(107);
				cmd();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracoesContext extends ParserRuleContext {
		public List<Declaracao_localContext> declaracao_local() {
			return getRuleContexts(Declaracao_localContext.class);
		}
		public Declaracao_localContext declaracao_local(int i) {
			return getRuleContext(Declaracao_localContext.class,i);
		}
		public List<Declaracao_globalContext> declaracao_global() {
			return getRuleContexts(Declaracao_globalContext.class);
		}
		public Declaracao_globalContext declaracao_global(int i) {
			return getRuleContext(Declaracao_globalContext.class,i);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_DECLARE) | (1L << PR_TIPO) | (1L << PR_PROCEDIMENTO) | (1L << PR_FUNCAO) | (1L << PR_CONSTANTE))) != 0)) {
				{
				setState(115);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PR_DECLARE:
				case PR_TIPO:
				case PR_CONSTANTE:
					{
					setState(113);
					declaracao_local();
					}
					break;
				case PR_PROCEDIMENTO:
				case PR_FUNCAO:
					{
					setState(114);
					declaracao_global();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_globalContext extends ParserRuleContext {
		public TerminalNode PR_PROCEDIMENTO() { return getToken(AlgumaParser.PR_PROCEDIMENTO, 0); }
		public TerminalNode IDENT() { return getToken(AlgumaParser.IDENT, 0); }
		public TerminalNode DELIMITADOR_ABRE_PARENTESES() { return getToken(AlgumaParser.DELIMITADOR_ABRE_PARENTESES, 0); }
		public TerminalNode DELIMITADOR_FECHA_PARENTESES() { return getToken(AlgumaParser.DELIMITADOR_FECHA_PARENTESES, 0); }
		public TerminalNode PR_FIM_PROCEDIMENTO() { return getToken(AlgumaParser.PR_FIM_PROCEDIMENTO, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public List<Declaracao_localContext> declaracao_local() {
			return getRuleContexts(Declaracao_localContext.class);
		}
		public Declaracao_localContext declaracao_local(int i) {
			return getRuleContext(Declaracao_localContext.class,i);
		}
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public TerminalNode PR_FUNCAO() { return getToken(AlgumaParser.PR_FUNCAO, 0); }
		public TerminalNode DELIMITADOR_DOIS_PONTOS() { return getToken(AlgumaParser.DELIMITADOR_DOIS_PONTOS, 0); }
		public Tipo_estendidoContext tipo_estendido() {
			return getRuleContext(Tipo_estendidoContext.class,0);
		}
		public TerminalNode PR_FIM_FUNCAO() { return getToken(AlgumaParser.PR_FIM_FUNCAO, 0); }
		public Declaracao_globalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterDeclaracao_global(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitDeclaracao_global(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitDeclaracao_global(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_globalContext declaracao_global() throws RecognitionException {
		Declaracao_globalContext _localctx = new Declaracao_globalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracao_global);
		int _la;
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PR_PROCEDIMENTO:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(120);
				match(PR_PROCEDIMENTO);
				setState(121);
				match(IDENT);
				setState(122);
				match(DELIMITADOR_ABRE_PARENTESES);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PR_VAR || _la==IDENT) {
					{
					setState(123);
					parametros();
					}
				}

				setState(126);
				match(DELIMITADOR_FECHA_PARENTESES);
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_DECLARE) | (1L << PR_TIPO) | (1L << PR_CONSTANTE))) != 0)) {
					{
					{
					setState(127);
					declaracao_local();
					}
					}
					setState(132);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_LEIA) | (1L << PR_ESCREVA) | (1L << PR_CASO) | (1L << PR_PARA) | (1L << PR_FACA) | (1L << PR_ENQUANTO) | (1L << PR_SE) | (1L << PR_RETORNE) | (1L << TIPO_ENDERECO))) != 0) || _la==IDENT) {
					{
					{
					setState(133);
					cmd();
					}
					}
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(139);
				match(PR_FIM_PROCEDIMENTO);
				}
				}
				break;
			case PR_FUNCAO:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(PR_FUNCAO);
				setState(141);
				match(IDENT);
				setState(142);
				match(DELIMITADOR_ABRE_PARENTESES);
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PR_VAR || _la==IDENT) {
					{
					setState(143);
					parametros();
					}
				}

				setState(146);
				match(DELIMITADOR_FECHA_PARENTESES);
				setState(147);
				match(DELIMITADOR_DOIS_PONTOS);
				setState(148);
				tipo_estendido();
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_DECLARE) | (1L << PR_TIPO) | (1L << PR_CONSTANTE))) != 0)) {
					{
					{
					setState(149);
					declaracao_local();
					}
					}
					setState(154);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_LEIA) | (1L << PR_ESCREVA) | (1L << PR_CASO) | (1L << PR_PARA) | (1L << PR_FACA) | (1L << PR_ENQUANTO) | (1L << PR_SE) | (1L << PR_RETORNE) | (1L << TIPO_ENDERECO))) != 0) || _la==IDENT) {
					{
					{
					setState(155);
					cmd();
					}
					}
					setState(160);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(161);
				match(PR_FIM_FUNCAO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public CmdLeiaContext cmdLeia() {
			return getRuleContext(CmdLeiaContext.class,0);
		}
		public CmdEscrevaContext cmdEscreva() {
			return getRuleContext(CmdEscrevaContext.class,0);
		}
		public CmdSeContext cmdSe() {
			return getRuleContext(CmdSeContext.class,0);
		}
		public CmdCasoContext cmdCaso() {
			return getRuleContext(CmdCasoContext.class,0);
		}
		public CmdParaContext cmdPara() {
			return getRuleContext(CmdParaContext.class,0);
		}
		public CmdEnquantoContext cmdEnquanto() {
			return getRuleContext(CmdEnquantoContext.class,0);
		}
		public CmdFacaContext cmdFaca() {
			return getRuleContext(CmdFacaContext.class,0);
		}
		public CmdAtribuicaoContext cmdAtribuicao() {
			return getRuleContext(CmdAtribuicaoContext.class,0);
		}
		public CmdChamadaContext cmdChamada() {
			return getRuleContext(CmdChamadaContext.class,0);
		}
		public CmdRetorneContext cmdRetorne() {
			return getRuleContext(CmdRetorneContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCmd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitCmd(this);
			else return visitor.visitChildren(this);
		}
	}
